--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <body class="page">
     <!--Header (верхня лінія)-->
     <header class="header">
+     <div class="container">
       <nav class="navigation">
         <a class="logo" href="./index.html" lang="en"><span class="logo-part">Web</span>Studio</a>
         <ul class="list">
@@ -42,17 +43,21 @@
         </li>
         <li class="nav-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </div>
     </header>
 
     <main>
       <!--Section 1 (шапка)-->
       <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero-btn" type="button">Замовити послугу</button>
+        </div>
       </section>
 
       <!--Section 2 (особливості)-->
       <section class="feature">
+        <div class="container">
         <h2 class="feature-headline" hidden>Особливости</h2>
         <ul class="list">
           <li class="feature-item">
@@ -80,10 +85,12 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
 
       <!--Section 3 (чим ми займаємося)-->
       <section class="outer">
+        <div class="container">
         <h2 class="outer-title">Чим ми займаємося</h2>
         <ul class="list">
           <li class="outer-item">
@@ -100,10 +107,12 @@
             <img src="./images/img3.jpg" alt="learn how to design a page" width="370" />
           </li>
         </ul>
+        </div>
       </section>
 
       <!--Section 4 (Наша команда)-->
       <section class="team">
+        <div class="container">
         <h2 class="team-title">Наша команда</h2>
         <ul class="list">
           <li class="team-item">
@@ -127,11 +136,13 @@
             <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!--Footer (подвал)-->
     <footer class="footer">
-      <a class="logo" href="./index.html" lang="en"
+      <div class="container">
+      <a class="logo footer-logo" href="./index.html" lang="en"
         ><span class="logo-part">Web</span><span class="footer-logo-part">Studio</span></a
       >
 
@@ -146,6 +157,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
