--- a/partfolio.html
+++ b/partfolio.html
@@ -26,6 +26,7 @@
   <body class="page">
     <!--Header (верхня лінія)-->
     <header class="header">
+      <div class="container">
       <nav class="navigation">
         <a class="logo" href="./index.html" lang="en"><span class="logo-part">Web</span>Studio</a>
         <ul class="list">
@@ -41,9 +42,11 @@
         </li>
         <li class="nav-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </div>
     </header>
     <main>
       <section>
+        <div class="container">
         <h1 hidden>Партфоліо</h1>
         <!--(список) фільтр робот-->
         <ul class="list">
@@ -113,11 +116,13 @@
             <p class="partfolio-work-text">Додаток</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer (подвал)-->
     <footer class="footer">
+      <div class="container">
       <a class="logo" href="./index.html" lang="en"
         ><span class="logo-part">Web</span><span class="footer-logo-part">Studio</span></a
       >
@@ -133,6 +138,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
