--- a/index.html
+++ b/index.html
@@ -27,39 +27,39 @@
   <body class="page">
     <!--Header (верхня лінія)-->
     <header class="header">
-     <div class="container">
+     <div class="container header-container">
+      <a class="logo header-link" href="./index.html" lang="en"><span class="logo-part">Web</span>Studio</a>
       <nav class="navigation">
-        <a class="logo" href="./index.html" lang="en"><span class="logo-part">Web</span>Studio</a>
-        <ul class="list">
-          <li class="nav-item"><a class="link current" href="./index.html">Студія</a></li>
-          <li class="nav-item"><a class="link" href="./partfolio.html">Портфоліо</a></li>
-          <li class="nav-item"><a class="link" href="#">Контакти</a></li>
+        <ul class="list nav-list">
+          <li class="nav-item"><a class="link header-link current" href="./index.html">Студія</a></li>
+          <li class="nav-item"><a class="link header-link" href="./partfolio.html">Портфоліо</a></li>
+          <li class="nav-item"><a class="link header-link" href="#">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul class="list">
+      <ul class="list nav-list">
         <li class="nav-contact">
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link header-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="nav-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="nav-contact"><a class="link header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
       </div>
     </header>
 
     <main>
       <!--Section 1 (шапка)-->
-      <section class="hero">
-        <div class="container">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero section">
+        <div class="container hero-container">
+        <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
         <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
 
       <!--Section 2 (особливості)-->
-      <section class="feature">
+      <section class="feature section">
         <div class="container">
-        <h2 class="feature-headline" hidden>Особливости</h2>
-        <ul class="list">
+        <h2 class="feature-headline visually-hidden">Особливости</h2>
+        <ul class="list feature-list">
           <li class="feature-item">
             <h3 class="feature-title">Увага до деталей</h3>
             <p class="feature-text">
@@ -89,10 +89,10 @@
       </section>
 
       <!--Section 3 (чим ми займаємося)-->
-      <section class="outer">
+      <section class="outer section">
         <div class="container">
         <h2 class="outer-title">Чим ми займаємося</h2>
-        <ul class="list">
+        <ul class="list outer-list">
           <li class="outer-item">
             <img src="./images/img1.jpg" alt="learning to write code" width="370" />
           </li>
@@ -111,29 +111,29 @@
       </section>
 
       <!--Section 4 (Наша команда)-->
-      <section class="team">
+      <section class="team section">
         <div class="container">
         <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
+        <ul class="list team-list">
           <li class="team-item">
             <img class="team-img" src="./images/team1.jpg" alt="Product Designer" width="270" />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-text" lang="en">Product Designer</p>
+            <div class="team-box"><h3 class="team-name">Ігор Дем'яненко</h3>
+            <p class="team-text" lang="en">Product Designer</p></div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/team2.jpg" alt="Frontend Developer" width="270" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-text" lang="en">Frontend Developer</p>
+            <div class="team-box"><h3 class="team-name">Ольга Рєпіна</h3>
+            <p class="team-text" lang="en">Frontend Developer</p></div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/team3.jpg" alt="Marketing" width="270" />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-text" lang="en">Marketing</p>
+            <div class="team-box"><h3 class="team-name">Микола Тарасов</h3>
+            <p class="team-text" lang="en">Marketing</p></div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/team4.jpg" alt="UI Designer" width="270" />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-text" lang="en">UI Designer</p>
+            <div class="team-box"><h3 class="team-name">Михайло Єрмаков</h3>
+            <p class="team-text" lang="en">UI Designer</p></div>
           </li>
         </ul>
         </div>
