--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
 
     <main>
       <!--Section 1 (шапка)-->
-      <section class="hero section">
+      <section class="hero">
         <div class="container hero-container">
-          <h1 class="hero-title">
-            Ефективні рішення для <br />
-            вашого бізнесу
-          </h1>
+          <h1 class="hero-title"> Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
@@ -167,7 +164,7 @@
 
         <address class="footer-contact">
           <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="list">
+          <ul class="list footer-list">
             <li class="footer-item">
               <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
